P4ADEV-3023 code review